--- a/Lab_5/styles.css
+++ b/Lab_5/styles.css
@@ -34,7 +34,7 @@ body {
 #center {
 	margin: 50px auto;
 	float: left;
-	width: 60%;	
+	width: 50%;	
 }
 
 .table {
@@ -46,7 +46,7 @@ body {
 #left, #right {
 	margin: 50px auto;
 	float: left;
-	width: 20%;
+	width: 25%;
 }
 
 .col2 {
@@ -70,5 +70,10 @@ body {
 }
 
 #Restart {
+	font-size: 24px;
+}
+
+.FileData {
+	color: #FFCC66;
 	font-size: 24px;
 }
